tests-integration/tests/roundtrip/invalid/semantic/typecheck/bool_in_arith_comparison/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/bool_in_arith_comparison/bool_in_arith_comparison.essence:2:11:
  |
2 | such that b > 5
  |           ^
Type error: b
	Expected: int
	Got: bool